switch to looping over virtual but selecting from non-virtual

--- a/app/templates/components/paper-autocomplete.hbs
+++ b/app/templates/components/paper-autocomplete.hbs
@@ -75,7 +75,8 @@
         groupIndex=""
         loadingMessage=(readonly loadingMessage)
         id=(readonly optionsId)
-        options=(readonly virtualItems)
+        options=(readonly publicAPI.results)
+        virtualOptions=(readonly virtualItems)
         optionsComponent=(readonly optionsComponent)
         select=(readonly publicAPI)
         as |option term|}}
